# V3D

./: CMakeLists.txt  README.md  README_RUS.md  README_old.md
application/: main.cc
application/camera/: camera.cc  camera.h
application/controler/: mainwindow.cc  mainwindow.h
application/information/mesh_information/: mesh_information.h
application/information/model_information/: model_information.h
application/light/: illumination.cc  illumination.h  light.cc  light.h  point_light.h  spot_light.h
application/mesh/: mesh.cc  mesh.h
application/model/: model.cc  model.h
application/opengl/: v3d_gl.cc  v3d_gl.h
application/savior/: savior.cc  savior.h
application/scene/: scene.cc  scene.h
application/settings/: global_settings.h
application/settings/model_settings/: model_settings.h
forms/: mainwindow.ui
shaders/: material.frag  material_flat.vert  shader.frag  shader_flat.vert
src_old/build-3DViewer-Desktop_x86_darwin_generic_mach_o_64bit-Debug/: Makefile
src_old/build-3DViewer-Desktop_x86_darwin_generic_mach_o_64bit-Debug/.qtc_clangd/: compile_commands.json
src_old/datasets/model/dente/: Dente.blend  Dente.mtl
src_old/src/: 3DViewer.pro  Makefile  fileloader.cpp  fileloader.h  readme.html  res.qrc  settingcontroller.cpp  settingcontroller.h  tests.c
src_old/src/frontend/: dialog_size.ui  mainwindow.ui
src_old/src/include/: dialog_size.h  glwidget.h  mainwindow.h  parser.h
src_old/src/source/: dialog_size.cpp  glwidget.cpp  main.cpp  mainwindow.cpp  parser.c
test/v3d_2/: CMakeLists.txt  main.cpp  main.qml
(+66 files in other folders)
